@@ -670,3 +670,4 @@ MakeInvisible = "Maak onzichtbaar"
 ViewDetails = "Bekijk details"
 MoveToCategory = "Verplaats naar categorie"
 EndingAssignments = "Bijna afgelopen opdrachten"
+LeavePublicationPage = "Je staat op het punt om deze pagina af te sluiten zonder de geselecteerde objecten te publiceren. Ben je zeker dat je wil afsluiten?"
