@@ -8,3 +8,5 @@
 * [CSS] Fixed toggle options in the course settings form
 * [Weblcms] Removed option "Menu Layout" from course settings since it is no longer used and replaced by much more intuitive "Navigate To"
 * [Weblcms] Translations of course setting "Tool Layout"
+* [Assignment Tool] Limited the amount of allowed content object types in the creation form of an assignment
+* [Weblcms] Bugfixes to the course visit tracking
